part1/second-application/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: second-application-svc
spec:
  type: ClusterIP
  selector:
    app: second-application
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
